Fixed left-shift of content

--- a/src/components/css/Mygallery.css
+++ b/src/components/css/Mygallery.css
@@ -23,8 +23,7 @@
 	border-bottom: 1px solid #eee;
 }
 .container {
-	margin-left:20px;
-	margin-right:20px;
+	margin: 0 auto;
 	
 	text-align: center;
 }
